# JAVA

./: JAVA.txt
Lab02/Lab02/: pom.xml
Lab02/Lab02/src/main/java/: module-info.java
Lab03/: README.md
Lab03/Lab03/: pom.xml
Lab03/Lab03/src/main/java/: module-info.java
Lab04/Biblioteka/: pom.xml
Lab04/Lab04/: pom.xml
Lab04/Lab04/src/main/java/: module-info.java
Lab04/Lab04klasy/: pom.xml
Lab05/SPI/: pom.xml
Lab05/SPI-API/: pom.xml
Lab05/SPI-API/src/main/java/: module-info.java
Lab05/SPI-PROVIDER/: pom.xml
Lab05/SPI-PROVIDER/src/main/java/: module-info.java
Lab05/SPI/src/main/java/: module-info.java
Lab06/Lab06/: pom.xml
Lab06/Lab06/src/main/java/: module-info.java
Lab06/Lab06/src/main/resources/: hibernate.cfg.xml
Lab07/API_Provider/: pom.xml
Lab07/API_Provider/src/main/resources/: application.properties  hibernate.cfg.xml
Lab08/C++ classes/: main.cpp
Lab08/C++ classes/CMakeProject1/: CMakeLists.txt
Lab08/C++ classes/CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
Lab08/C++ classes/ConsoleApplication1/: ConsoleApplication1.sln
Lab08/C++ classes/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
Lab08/JNI-APP/: pom.xml
Lab09/Lab09/: pom.xml  product.xml
Lab10/Lab10Lib/CryptoLib/: pom.xml
Lab10/lab10/: pom.xml
Lab11/lab10/: pom.xml
Lab11/lab10/java16/: pom.xml
Lab11/lab11/lab11/: pom.xml
Lab11/lab11/lab11/java11/: pom.xml
Lab11/lab11/lab11/java17/: pom.xml
Lab11/lab11/lab11/java8/: pom.xml
Lab11/multi/multi/: pom.xml
(+127 files in other folders)
